# monty

./: .gitignore  CLAUDE.md  Makefile  README.md  RELEASING.md  bytecode-plan.md  pyproject.toml
.claude/: settings.json
benches/: main.rs
crates/monty-python/: Cargo.toml  README.md  build.rs  example.py  monty.pyi  pyproject.toml
crates/monty-python/python/pydantic_monty/: __init__.py
crates/monty-python/src/: convert.rs  dataclass.rs  exceptions.rs  external.rs  lib.rs  monty_cls.rs
crates/monty-python/tests/: test_async.py  test_basic.py  test_dataclasses.py  test_external.py  test_limits.py  test_os_access.py  test_os_access_compat.py  test_os_access_raw.py  test_os_calls.py  test_readme_examples.py  test_repl.py  test_serialize.py  test_start.py  test_threading.py  test_type_check.py
examples/: README.md
scripts/: codecov_diff.py  complete_tests.py  iter_test_methods.py
src/: evaluate.rs  exceptions.rs  heap.rs  lib.rs  object.rs  parse.rs  parse_error.rs  prepare.rs  run.rs  types.rs
test_cases/: bytes__len_basic.py  bytes__len_basic_str.py  bytes__len_empty.py  bytes__len_empty_str.py  bytes__method_bytes_repr.py  edge__all_empty.py  edge__float_int_mod.py  edge__int_float_mod.py  edge__large_list_concat.py  edge__large_string_concat.py  edge__list_self_concat_twice.py  edge__mod_comparison_chain.py  execute_ok__add_ints.py  execute_ok__add_strs.py  execute_ok__bytes_equal.py  execute_ok__bytes_equal2.py  execute_ok__discard_list.py  execute_ok__for_loop_str_append_assign.py  execute_ok__for_loop_str_append_assign_op.py  execute_ok__ints_equal.py  execute_ok__list_equal.py  execute_ok__list_repr.py  (+109 more)
(+123 files in other folders)
