[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
# uses this package name since `monty` is taken, the module is still named `monty`
name = "monty-python"
version = "0.1.0"
description = "Python bindings for the Monty sandboxed Python interpreter"
requires-python = ">=3.10"

[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "inline-snapshot>=0.31.1",
    "pytest>=9.0.2",
    "pytest-examples>=0.0.14",
    "pytest-pretty>=1.3.0",
]
